<resources>
    <string name="app_name">myMotor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_gyms">Gyms</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="title_activity_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_all_sessions">Sessions</string>
    <string name="enter_email_address">Email address</string>
    <string name="enter_password">Password</string>
    <string name="enter_username">Username</string>
    <string name="enter_date_of_birth">Date of birth</string>
    <string name="option_male">Male</string>
    <string name="option_female">Female</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="car_brand">Home (car brand)</string>
    <string name="current_mileage">Current mileage (in miles)</string>
    <string name="target_mileage">Target mileage (in miles)</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="location">Location</string>
    <string name="date_of_workout">Date of workout</string>
    <string name="exercise_type">Exercise type</string>
    <string name="number_of_reps">Number of reps</string>
    <string name="save_session">SAVE SESSION</string>
    <string name="book_session">Book session</string>
    <string name="show_on_map">Show on map</string>
    <string name="option_english">English</string>
    <string name="option_kiswahili">Kiswahili</string>
    <string name="choose_language">Choose language</string>
    <string name="garage">Garage</string>
    <string name="service">Service</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="upcoming_sessions">Upcoming sessions</string>
    <string name="mechanics">Mechanics</string>
    <string name="title_activity_instructor">Instructors</string>
</resources>