<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gyms"
            android:icon="@drawable/ic_local_car_wash_black_24dp"
            android:title="@string/garage" />
        <item
            android:id="@+id/nav_instructor"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/mechanics" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/service" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>