<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30px"
    android:orientation="vertical"
    android:background="#fff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sign_up">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:src="@drawable/ic_directions_car_black_24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20px"
        android:id="@+id/edittext_username_signup"
        android:hint="@string/enter_username"
        android:inputType="textCapSentences"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20px"
        android:id="@+id/edittext_email_signup"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20px"
        android:id="@+id/edittext_password_signup"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/enter_date_of_birth"
            android:editable="false"
            android:textColor="#000"/>

    </LinearLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_male"
            android:textColor="#000"
            android:onClick="onRadioButtonClicked"
            android:checked="true"/>
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_female"
            android:textColor="#000"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/button_signup"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="30px"
        android:text="@string/sign_up"
        app:pb_colorNormal="#fff"
        android:textColor="#000"
        android:textSize="12sp" />


</LinearLayout>