<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nicolemosiexample.motor.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_language"
                android:textColor="#000"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <RadioButton android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_english"
                    android:textColor="#000"
                    android:onClick="onRadioButtonClicked"
                    android:checked="true"/>
                <RadioButton android:id="@+id/radio_kiswahili"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option_kiswahili"
                    android:textColor="#000"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/button_language_save"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="30px"
                android:text="@string/save_changes"
                app:pb_colorNormal="#fff"
                android:textColor="#000"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>